Authen-SASL 2.13 -- Thu Sep 24 17:27:47 CDT 2009

  * RT#42191 Only use pass for GSSAPI credentials if it is an object of type GSSAPI::Cred
  * RT#675 Authorization with Authen::SASL::Perl::External
  * Call client_new and server_new inside eval so further plugins can be tried before failing
  * Prefer to use Authen::SASL::XS over Authen::SASL::Cyrus

Authen-SASL 2.12 -- Mon Jun 30 21:35:21 CDT 2008

Enhancements
  * GSSAPI implement protocol according to RFC, but by default, remain compatible with cyrus sasl lib
  * DIGEST-MD5 implement channel encryption layer

Authen-SASL 2.11 -- Mon Apr 21 10:23:19 CDT 2008

Enhancements
  * implement securesocket() in the ::Perl set of plugins

Bug Fixes
  * fix parsing challenges from GnuSASL
  * update tests for DIGEST-MD5
  * New test from Phil Pennock for testing final server response

Authen-SASL 2.10 -- Sat Mar 25 13:11:47 CST 2006

Enhancements
  * Added Authen::SASL::Perl::GSSAPI
  * Added error method to Authen::SASL to obtain error from last connection

Bug Fixes
  * Authen::SASL::Perl::DIGEST_MD5
    - Fixed response to server to pass digest-uri
    - Correct un-escaping behaviour when reading the challenge,
    - check for required fields (according to the RFC),
    - allow for qop not to be sent from the server (according to the RFC),
    - add a callback for the realm.

Authen-SASL 2.09 -- Tue Apr 26 06:55:10 CDT 2005

Enhancements
  * authname support in Authen::SASL::Perl::DIGEST_MD5
  * flexible plugin selection in Authen::SASL using import()
     i.e.    use Authen::SASL qw(Authen::SASL::Cyrus);
  * new documentation for
    - Authen::SASL::Perl::ANONYMOUS
    - Authen::SASL::Perl::CRAM_MD5
    - Authen::SASL::Perl::EXTERNAL
    - Authen::SASL::Perl::LOGIN
    - Authen::SASL::Perl::PLAIN
    - Authen::SASL::Perl
  * updates in the tests

Authen-SASL 2.08 -- Tue May 25 11:24:21 BST 2004

Bug Fixes
  * Fix the handling of qop in Digest-MD5

Authen-SASL 2.07 -- Sat Apr 10 09:06:21 BST 2004

Bug Fixes